fix the filter to be showing in any size of screen and increase the padding fot the container so will not be covered in small screen

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 0 15px;
-  padding-top: 80px;
+  padding-top: 150px;
 }
 
 .is-white {
